Nuevo método Agregar y además algunos controles

--- a/PryConexiónBD/PryConexiónBD.csproj
+++ b/PryConexiónBD/PryConexiónBD.csproj
@@ -62,6 +62,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="clsConexionBD.cs" />
+    <Compile Include="clsControles.cs" />
     <Compile Include="clsProducto.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
